# nuxt-fastapi-sass

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/: main.py
backend/src/db/: __init__.py
backend/src/modules/helpers/: hash.py  models.py  schemas.py
backend/src/modules/user/: auth.py  crud.py  deps.py  models.py  router.py  schemas.py
backend/src/user/: models.py  schemas.py
